<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:minHeight="100dp"
    android:minWidth="100dp"
    android:background="#ececec">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/cardReceitas"
            android:clickable="true"
            android:background="@drawable/card_view_item"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/receitas"/>

                <!--used to represent same effect <hr/> from html-->
                <View style="@style/Divider"/>

                <TextView
                    android:id="@+id/info_text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtDescricao"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/cardDespesas"
            android:clickable="true"
            android:background="@drawable/card_view_item"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/info_textDuplicated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/despesas"/>

                <!--used to represent same effect <hr/> from html-->
                <View style="@style/Divider"/>

                <TextView
                    android:id="@+id/info_textDuplicated4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtDescricao"/>

            </LinearLayout>

        </LinearLayout>

        <!--Used to fix button on bottom/right-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom">

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                fab:menu_labels_style="@style/MenuLabelsStyle"
                fab:menu_animationDelayPerItem="0"
                fab:menu_colorNormal="#33CCCC"
                fab:menu_colorPressed="#33CCCC"
                fab:menu_colorRipple="#33CCCC">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btnNovaCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_file_upload_white_24dp"
                    fab:fab_label="@string/novaCategoria"
                    fab:fab_colorNormal="#336699"
                    fab:fab_colorPressed="#336699"
                    fab:fab_colorRipple="#336699"
                    style="@style/MenuButtonsStyle" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btnNovaReceita"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_file_upload_white_24dp"
                    fab:fab_label="@string/novaReceita"
                    fab:fab_colorNormal="#00CC00"
                    fab:fab_colorPressed="#00CC00"
                    fab:fab_colorRipple="#00CC00"
                    style="@style/MenuButtonsStyle" />

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/btnNovaDespesa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_file_download_white_24dp"
                    fab:fab_label="@string/novaDespesa"
                    fab:fab_colorNormal="#CC0000"
                    fab:fab_colorPressed="#CC0000"
                    fab:fab_colorRipple="#CC0000"
                    style="@style/MenuButtonsStyle" />

            </com.github.clans.fab.FloatingActionMenu>

        </LinearLayout>

    </LinearLayout>

</ScrollView>